fixed error in wrapping title in a tag

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -77,7 +77,7 @@ h2, h3{
 /* Content */
 .content {
     margin: 0 auto;
-    max-width: 800px;
+    max-width: 1000px;
 }
 
 /* Titles */
